--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "uniqid": "^5.3.0",
     "web-vitals": "^1.1.1"
   },
+  "homepage": "https://wesoly97.github.io/ReactExpenses/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
